--- a/ex002.html
+++ b/ex002.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javasricpt
-    </title>
+    <title>Javasricpt</title>
+    <link rel="stylesheet" href="style2.css">
+    <script src="scrip2.js"></script>
 </head>
 <body>
     
